:uri-asciidoctor: http://asciidoctor.org
:icons: font
:source-highlighter: pygments
:nofooter:
link:index.html[Home]

== Mouseless Changelog


## 1.4.3
  . Fixed #529 buffers search 

## 1.4.2
  . Fixed #107 regression from 0e249e0b1b96f43ee06803bc9c23e01114374990


## 1.4.1

  . Merged changes
  .. workaround for Chrome collapseToEnd() bug #527 - command bar focus

  

## 1.4.0

  . Merged changes
  .. fix 819232726ea22e90c317f9e4487f12eff19f172d #516 pegjs single line comment issue
  .. Changed buffers priority 
  .. Fixed CSS Options 
  .. A lot of refactoring in 7031222822f3e5389f8ad594c54cf9e8e3f18b33 and 43e5a6bbf79468f56d68274e84f18adfa2f3c45d
  .. Removing reverse image change
  .. Reverted pull #502
  .. added view source command with chrome extension keyboard shortcut
  .. improvements to parser - multi-line arrays and multi-dimensional, variable referencing
  .. major changes to hints - new site filters format (view doc), removed experimental settings introduced in #17 while retaining functionality
  .. fix to incremental search #524
  .. added beginningOfLineOrSelectAll from tarao


## 1.3.3

 . Added multithreaded support for external editor https://github.com/hbt/mouseless/issues/81
 . Fixed undefined settings.mouselesshintcharacters error https://github.com/hbt/mouseless/issues/82
 . Merged fix for  `nextCompletionResults` https://github.com/1995eaton/chromium-vim/pull/502 https://github.com/1995eaton/chromium-vim/issues/390 https://github.com/1995eaton/chromium-vim/pull/502
 . Merged fix for clicking dropdowns https://github.com/1995eaton/chromium-vim/commit/aebe4469892100cb005ca582d91357f50b0ae57f https://github.com/1995eaton/chromium-vim/issues/504
 . Merged fix for globals format for pegjs https://github.com/1995eaton/chromium-vim/pull/491

## 1.3.2

 . Fixed contentEditable elements not being editable using external editor https://github.com/hbt/mouseless/issues/75