@@ -511,6 +511,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Fixed #529 buffers search</p>
 </li>
+<li>
+<p>Fixed #115 #114 errors when creating new tab</p>
+</li>
+<li>
+<p>Fixed #108 pasting urls starting by a space now gets trimmed</p>
+</li>
+<li>
+<p>Fixed documentation commands.adoc search commands</p>
+</li>
 </ol>
 </div>
 </div>
